# dao-ai

./: Makefile  README.md  databricks.yaml  databricks.yaml.template  environment.yaml  my_graph_app.yaml  pyproject.toml  requirements.txt  test_module_loading.ipynb
.github/workflows/: publish-to-pypi.yaml
config/dais2025/: model_config_dais.yaml
config/examples/: README.md  deep_research.yaml  executive_assistant.yaml  genie.yaml  genie_and_vector_search.yaml  mcp.yaml  mcp_with_uc_connection.yaml  prompt_optimization.yaml  reservations.yaml  tru_green.yaml  vector_search_with_reranking.yaml
config/examples/01_getting_started/: README.md  minimal.yaml
config/examples/02_mcp/: README.md  custom_mcp.yaml  external_mcp.yaml  filtered_mcp.yaml  jira_integration.yaml  managed_mcp.yaml  mcp_basic.yaml  mcp_with_uc_connection.yaml
config/examples/02_tools/: README.md
config/examples/03_reranking/: README.md  instruction_aware_reranking.yaml  vector_search_with_reranking.yaml
config/examples/04_genie/: genie_basic.yaml  genie_lru_cache.yaml  genie_semantic_cache.yaml  genie_with_conversation_id.yaml
config/examples/05_human_in_the_loop/: README.md
config/examples/05_memory/: README.md  conversation_summarization.yaml  lakebase_persistence.yaml
config/examples/06_guardrails/: README.md
config/examples/06_human_in_the_loop/: README.md  human_in_the_loop.yaml
config/examples/07_guardrails/: README.md  guardrails_basic.yaml
config/examples/08_prompt_engineering/: README.md  prompt_optimization.yaml  prompt_registry.yaml
config/examples/08_structured_output/: README.md
config/examples/09_agent_integrations/: README.md
config/examples/10_complete_applications/: genie_and_genie_mcp.yaml  genie_vector_search_hybrid.yaml  hardware_store.yaml  hardware_store_lakebase.yaml  hardware_store_swarm.yaml  quick_serve_restaurant.yaml  reservations_system.yaml
config/examples/10_prompt_engineering/: README.md  prompt_optimization.yaml  prompt_registry.yaml
config/examples/11_middleware/: README.md
config/examples/12_complete_applications/: deep_research.yaml  executive_assistant.yaml  genie_and_genie_mcp.yaml  hardware_store.yaml  hardware_store_lakebase.yaml  quick_serve_restaurant.yaml
config/examples/12_middleware/: README.md  limit_middleware.yaml
config/examples/12_orchestration/: README.md
config/examples/13_complete_applications/: README.md  brick_store.yaml  executive_assistant.yaml  genie_and_genie_mcp.yaml  genie_vector_search_hybrid.yaml  hardware_store.yaml  hardware_store_lakebase.yaml  hardware_store_swarm.yaml  quick_serve_restaurant.yaml  reservations_system.yaml
config/examples/14_on_behalf_of_user/: README.md  obo_basic.yaml
config/examples/15_complete_applications/: README.md  hardware_store_instructed.yaml  hardware_store_lakebase.yaml
config/examples/16_instructed_retriever/: README.md  full_pipeline.yaml  instructed_retriever.yaml
config/hardware_store/: model_config.yaml  model_config_postgres.yaml  model_config_supervisor.yaml  model_config_swarm.yaml  supervisor.yaml  supervisor_postgres.yaml  swarm.yaml
config/quick_serve_restaurant/: quick-serve-restaurant.yaml
config/retail/: model_config.yaml  model_config_postgres.yaml  model_config_supervisor.yaml  model_config_swarm.yaml
data/hardware_store/: inventory.snappy.parquet
data/quick_serve_restaurant/: fulfil_item_orders.sql  items_description.csv  items_description.sql
docs/: contributing.md  examples.md  key-capabilities.md
examples/executive_assistant/: examples.yaml
examples/hardware_store/: examples.yaml
examples/quick_serve_restaurant/: examples.yaml
functions/quick_serve_restaurant/: insert_coffee_order.sql  match_historical_item_order_by_date.sql  match_item_by_description_and_price.sql
notebooks/: 02_provision_vector_search.py  03_generate_evaluation_data.py  05_agent_as_code_driver.py  06_run_evaluation.py  07_run_evaluation.py  08_run_examples.py  09_evaluate_inferences.py  99_scratchpad.py
schemas/: model_config_schema.json
src/dais2025/tools/: employee.py  store.py
src/dao_ai/: cli.py  config.py  evaluation.py  graph.py  models.py  nodes.py  prompts.py  state.py  tracing.py  udf.py  utils.py  vector_search.py
src/dao_ai/apps/: handlers.py  model_serving.py
src/dao_ai/hooks/: __init__.py  core.py
src/dao_ai/memory/: postgres.py
src/dao_ai/middleware/: __init__.py
src/dao_ai/orchestration/: core.py  swarm.py
src/dao_ai/prompts/: __init__.py  instructed_retriever_decomposition.yaml  instruction_reranker.yaml  verifier.yaml
src/dao_ai/providers/: databricks.py
src/dao_ai/tools/: __init__.py  core.py  genie.py  instructed_retriever.py  instruction_reranker.py  mcp.py  router.py  vector_search.py  verifier.py
src/hardware_store/: tools.py
src/quick_serve_restaurant/: tools.py
src/retail/: hooks.py
tests/config/: test_model_config.yaml
tests/dao_ai/: test_chat_history.py  test_config.py  test_databricks.py  test_evaluation.py  test_genie.py  test_genie_conversation_ids_in_outputs.py  test_genie_databricks_integration.py  test_genie_room_model.py  test_inference.py  test_inference_integration.py  test_instructed_retriever.py  test_instruction_reranker.py  test_mcp.py  test_mcp_filtering_integration.py  test_mcp_function_model.py  test_prompt_optimizations.py  test_prompts.py  test_reranking.py  test_reranking_integration.py  test_resources_model_genie_integration.py  test_router.py  test_swarm_middleware.py  test_utils.py  test_verifier.py
